--- a/client/src/components/dashboard.css
+++ b/client/src/components/dashboard.css
@@ -1,6 +1,6 @@
 .main{
   width: 100vw;
-  height: 100vh; 
+  height: 100%; 
   margin-top: 5vh;
   margin-bottom: 5vh;
   border-radius: 20px;
